# PerfectDou

./: README.md  pyproject.toml
.augment/rules/: common.md
docs/: battle_assistant_guide.md  development_guide.md  project_overview.md
src/perfectdou/battle_assistant/: __init__.py  ai_advisor.py  battle_interface.py  card_parser.py  game_state.py
src/perfectdou/cli/: __init__.py  battle_assistant.py  demo_battle_assistant.py  evaluate.py  generate_eval_data.py
tests/: __init__.py  test_battle_assistant.py
