[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfectdou"
version = "1.0.0"
description = "PerfectDou: Dominating DouDizhu with Perfect Information Distillation - NeurIPS 2022"
authors = [
    {name = "Guan Yang", email = "yangguan@corp.netease.com"},
    {name = "Minghuan Liu", email = "minghuanliu@sjtu.edu.cn"},
    {name = "Weijun Hong", email = "hongweijun@corp.netease.com"},
    {name = "Weinan Zhang"},
    {name = "Fei Fang"},
    {name = "Guangjun Zeng", email = "gzzengguangjun@corp.netease.com"},
    {name = "Yue Lin"}
]
maintainers = [
    {name = "Guan Yang", email = "yangguan@corp.netease.com"},
    {name = "Minghuan Liu", email = "minghuanliu@sjtu.edu.cn"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7,<3.8"
keywords = ["doudizhu", "ai", "reinforcement-learning", "perfect-information", "game-ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Board Games"
]
dependencies = [
    "torch>=1.6.0",
    "onnxruntime==1.7.0",
    "rlcard>=1.0.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "black>=22.0.0,<23.0.0",
    "flake8>=4.0.0,<5.0.0",
    "mypy>=0.950,<1.0.0"
]

[project.scripts]
evaluate = "perfectdou.cli.evaluate:main"
generate-eval = "perfectdou.cli.generate_eval_data:main"
battle = "perfectdou.cli.battle_assistant:main"
demo = "perfectdou.cli.demo_battle_assistant:main"

[project.urls]
Homepage = "https://github.com/Netease-Games-AI-Lab-Guangzhou/PerfectDou"
Repository = "https://github.com/Netease-Games-AI-Lab-Guangzhou/PerfectDou"
Documentation = "https://arxiv.org/abs/2203.16406"

[tool.hatch.build.targets.wheel]
packages = ["src/perfectdou"]

[[tool.uv.index]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
